# analise-desempenho-frota

./: README.md  pyproject.toml
data/raw/: dados_veiculos.csv
notebooks/: 01_preprocessing.ipynb
src/visualization/: hist.py
